--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
   	<dependencies>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-server</artifactId>
-                <version>3.0.1</version>
+                <artifactId>selenium-java</artifactId>
+                <version>LATEST</version>
             </dependency>
             <dependency>
 			    <groupId>org.testng</groupId>
